[package]
name = "asyncute"
version = "0.0.3"
edition = "2021"
description = "asyncute (async execute) can execute async futures globally without per-executor queues."
license = "GPL-3.0"
authors = ["Delta 4"]
repository = "https://github.com/delta4chat/asyncute"
keywords = ["async", "executor", "async-executor"]
categories = ["asynchronous", "concurrency"]

[features]
default = []

[dependencies]
ahash = "0.8.11"
async-task = "4.7.1"
crossbeam-channel = "0.5.14"
event-listener = { version = "5.4.0", features = ["portable-atomic"] }
log = { version = "0.4.27", features = ["std"] }
num-traits = "0.2.19"
once_cell = { version = "1.21.3", features = ["parking_lot", "portable-atomic"] }
portable-atomic = { version = "1.11.0", features = ["float", "std"] }
scc2 = "2.4.2"

[dev-dependencies]
smol = "2.0.2"
env_logger = "0.11.1"
once_cell = "1.19.0"
moka = { version = "0.12.10", features = ["future"] }
smolscale = "0.4.15"
smolscale2 = "0.6.0"
async-global-executor = "3.1.0"
async-std = "1.13.1"
tokio = { version = "1.44.2", features = ["full", "rt"] }
fastrand = "2.3.0"

[profile.dev]
panic = "unwind"
opt-level = 2
lto = "off"
#strip = "none"
codegen-units = 256
overflow-checks = true
debug-assertions = true
debug = "limited"
incremental = true

[profile.release]
panic = "unwind"
opt-level = 3
lto = true
strip = true
codegen-units = 1
overflow-checks = true
debug-assertions = false
debug = 1
incremental = false
