[package]
name = "asyncute"
version = "0.0.3"
edition = "2021"
description = "asyncute (async execute) can execute async futures globally without per-executor queues."
license = "GPL-3.0"
authors = ["Delta 4"]
repository = "https://github.com/delta4chat/asyncute"
keywords = ["async", "executor", "async-executor"]
categories = ["asynchronous", "concurrency"]

[features]
default = ["flume"]

flume = ["dep:flume"]
crossbeam-channel = ["dep:crossbeam-channel"]
kanal = ["dep:kanal"]

crossbeam-deque = ["dep:crossbeam-deque", "dep:event-listener"]

std-mpmc = ["nightly"]
nightly = []

[dependencies]
async-task = "4.7.1"

crossbeam-channel = { optional = true, version = "0.5.15" }
flume = { optional = true, version = "0.11.1", default-features = false }

ahash = "0.8.12"
scc2 = "2.4.3"

num-traits = "0.2.19"
log = { version = "0.4.27", features = ["std"] }
once_cell = { version = "1.21.3", features = ["parking_lot", "portable-atomic"] }
portable-atomic = { version = "1.11.0", features = ["float", "std"] }
kanal = { version = "0.1.1", optional = true, default-features = false }
crossbeam-deque = { version = "0.8.6", optional = true }
event-listener = { version = "5.4.0", optional = true, features = ["portable-atomic"] }

[dev-dependencies]
smol = "2.0.2"
env_logger = "0.11.8"
once_cell = "1.21.3"
moka = { version = "0.12.10", features = ["future"] }
smolscale = "0.4.16"
smolscale2 = "0.6.0"
async-global-executor = "3.1.0"
async-std = "1.13.1"
tokio = { version = "1.45.0", features = ["full", "rt"] }
fastrand = "2.3.0"
smoltimeout = "0.6.2"
criterion = "0.5.1"

[profile.dev]
panic = "unwind"
opt-level = 2
lto = "off"
#strip = "none"
codegen-units = 256
overflow-checks = true
debug-assertions = true
debug = "limited"
incremental = true

[profile.release]
panic = "unwind"
opt-level = 3
lto = true
strip = true
codegen-units = 1
overflow-checks = true
debug-assertions = false
debug = 1
incremental = false

[[bench]]
name = "asyncute"
harness = false
